# golf-shot-cutter

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  biome.json  docker-compose.dev.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
apps/api/: .dockerignore  Dockerfile  project.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: container.py
apps/api/app/core/models/: __init__.py  events.py  session.py  shot.py
apps/api/app/core/schemas/: __init__.py  events.py  responses.py  sessions.py  shots.py
apps/api/app/infrastructure/: id_generator.py
apps/api/app/infrastructure/auth/: jwt_service.py
apps/api/app/infrastructure/queue/: celery_app.py  celery_job_queue.py  redis_event_publisher.py
apps/api/app/infrastructure/storage/: r2_storage.py
apps/api/app/middleware/: error_handler.py
apps/api/app/persistence/mongo/: client.py  session_repository.py
apps/api/app/repository/auth/: jwt_repository.py
apps/api/app/repository/mongo/: documents.py  indexes.py  shot_repository.py
apps/api/app/repository/queue/: event_publisher_repository.py  job_queue_repository.py
apps/api/app/repository/r2/: storage_repository.py
apps/api/app/services/: errors.py  export_service.py  processing_service.py  session_service.py  shot_service.py
apps/api/src/golf_api/: __init__.py  main.py  settings.py
apps/api/src/golf_api/middleware/: error_handler.py  request_id.py
apps/api/src/golf_api/routers/: auth.py  export.py  realtime.py  sessions.py  shots.py  upload.py
apps/api/tests/: conftest.py  test_auth.py  test_export.py  test_health.py  test_middleware.py  test_realtime.py  test_sessions.py  test_shots.py  test_upload.py
apps/api/tests/core/: test_settings.py
apps/api/tests/core/models/: test_events.py  test_session.py  test_shot.py  test_value_objects.py
apps/api/tests/fakes/: fake_publisher.py  fake_queue.py  fake_storage.py  in_memory_repos.py
apps/api/tests/infrastructure/: test_clock_and_ids.py
apps/api/tests/infrastructure/auth/: test_jwt_service.py
apps/api/tests/infrastructure/queue/: test_celery_job_queue.py  test_redis_event_publisher.py
apps/api/tests/infrastructure/storage/: test_r2_storage.py
apps/api/tests/persistence/mongo/: test_documents.py  test_indexes.py  test_session_repository.py  test_shot_repository.py
apps/api/tests/repository/: test_clock_and_ids.py  test_settings.py
apps/api/tests/repository/auth/: test_jwt_repository.py
apps/api/tests/repository/mongo/: test_documents.py  test_indexes.py  test_session_repository.py  test_shot_repository.py
apps/api/tests/repository/queue/: test_event_publisher.py  test_job_queue.py
apps/api/tests/repository/r2/: test_storage_repository.py
apps/api/tests/services/: test_export_service.py  test_processing_service.py  test_session_service.py  test_shot_service.py
apps/worker/: Dockerfile  project.json  pyproject.toml
apps/worker/tests/fixtures/: make_audio.py  make_video.py
apps/worker/tests/pipeline/: test_audio_onset_librosa.py  test_clip_cutter_ffmpeg.py  test_pipeline.py  test_pose_verifier_mediapipe.py  test_pose_verifier_stub.py
apps/worker/tests/tasks/: test_generate_export_zip.py  test_process_video.py
apps/worker/worker_app/: __init__.py  container.py  main.py
apps/worker/worker_app/pipeline/: audio_onset.py  audio_onset_librosa.py  audio_onset_stub.py  clip_cutter.py  clip_cutter_ffmpeg.py  clip_cutter_stub.py  pipeline.py  pose_overlay.py  pose_verifier.py  pose_verifier_mediapipe.py  pose_verifier_stub.py  types.py
apps/worker/worker_app/tasks/: generate_export_zip.py  generate_pose_clip.py  process_video.py
libs/application/: pyproject.toml
libs/application/src/golf_application/: __init__.py
libs/application/src/golf_application/ports/: __init__.py  event_publisher.py  id_generator.py  job_queue.py  session_repository.py  shot_repository.py  storage_gateway.py
libs/application/src/golf_application/use_cases/: add_manual_shot.py  create_session.py  delete_shot.py  export_session_zip.py  get_session_with_shots.py  list_sessions.py  process_video.py  start_processing.py  (+2 more)
libs/application/tests/fakes/: fake_clock.py  fake_id_generator.py  fake_publisher.py  fake_queue.py  fake_storage.py  in_memory_repos.py
libs/application/tests/use_cases/: test_create_session.py  test_manual_shots.py  test_process_video.py  test_queries.py  test_start_processing.py  test_storage_use_cases.py  test_update_shot_boundary.py
libs/infrastructure/: pyproject.toml
libs/infrastructure/src/golf_infrastructure/: __init__.py  settings.py
libs/infrastructure/tests/: test_clock_and_ids.py  test_settings.py
libs/infrastructure/tests/auth/: test_jwt_service.py
libs/infrastructure/tests/mongo/: test_documents.py  test_indexes.py  test_session_repository.py  test_shot_repository.py
libs/infrastructure/tests/queue/: test_event_publisher.py  test_job_queue.py
libs/infrastructure/tests/r2/: test_storage_gateway.py
(+95 files in other folders)
