[project]
name = "golf-shot-cutter"
version = "0.0.0"
description = "Golf shot auto-cutter monorepo root"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/domain",
    "libs/application",
    "libs/infrastructure",
    "apps/api",
    "apps/worker"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "import-linter>=2.1",
    "ruff>=0.7",
    "pre-commit>=3.8"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["libs", "apps"]
