[project]
name = "golf-shot-cutter"
version = "0.0.0"
description = "Golf shot auto-cutter monorepo root"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/domain",
    "libs/application",
    "libs/infrastructure",
    "libs/contracts/generated/python",
    "apps/api",
    "apps/worker"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "import-linter>=2.1",
    "ruff>=0.7",
    "pre-commit>=3.8",
    "datamodel-code-generator>=0.26",
    "mongomock-motor>=0.0.34",
    "moto[s3]>=5.0",
    "fakeredis>=2.26",
    "httpx>=0.27"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]
pythonpath = ["apps/api/tests"]
