[project]
name = "golf-api"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.12",
    "golf-domain",
    "golf-application",
    "golf-infrastructure",
    "golf-contracts"
]

[tool.uv.sources]
golf-domain = { workspace = true }
golf-application = { workspace = true }
golf-infrastructure = { workspace = true }
golf-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/golf_api"]
