[project]
name = "golf-worker"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "golf-api",
    "celery>=5.4",
    "redis>=5.1",
    "ffmpeg-python>=0.2",
    "librosa>=0.10",
    "numpy>=1.24,<2.0",
    "soundfile>=0.12",
    "opencv-python-headless>=4.10",
    "mediapipe>=0.10",
]

[tool.uv.sources]
golf-api = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker_app"]
