[project]
name = "golf-application"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "golf-domain"
]

[tool.uv.sources]
golf-domain = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/golf_application"]
